finish recieve email